# GUI-Application-Template

./: CMakeLists.txt  README.md
cmake/: imgui.cmake
include/: GAT.hpp
src/: GAT.cpp  main.cpp
